--- a/categories.html
+++ b/categories.html
@@ -5,7 +5,7 @@ permalink: /categories/
 ---
 {% for category in site.categories %}
   {% capture category_name %}{{ category | first }}{% endcapture %}
-  <section id="#{{ category_name | slugize }}">
+  <section id="{{ category_name | slugize }}">
     <p class="text--grey  no-margin">Articles in</p>
     <h2 class="heading">{{ category_name | capitalize}}</h2>
     <a name="{{ category_name | slugize }}"></a>
